# Javis

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/encoders/: Cargo.toml
crates/encoders/benches/: encode_decode.rs
crates/encoders/src/: decode.rs  inject.rs  lib.rs  sdr.rs  text.rs
crates/encoders/tests/: decoder.rs  encoding.rs  injection.rs  pattern_completion.rs  pattern_completion_with_homeostasis.rs
crates/eval/: Cargo.toml
crates/eval/examples/: hello_javis.rs  reward_benchmark.rs  scale_benchmark.rs
crates/eval/src/: lib.rs  reward_bench.rs  scale_bench.rs  scale_corpus.rs  token_efficiency.rs  wiki_corpus.rs
crates/eval/tests/: associative_recall.rs  benchmark.rs  scale_bench_smoke.rs  wiki_benchmark.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/snn-core/: Cargo.toml
crates/snn-core/benches/: brain_step.rs  network_step.rs
crates/snn-core/examples/: profile_step_immutable.rs  throughput.rs
crates/snn-core/src/: brain.rs  btsp.rs  heterosynaptic.rs  homeostasis.rs  intrinsic.rs  istdp.rs  lib.rs  metaplasticity.rs  network.rs  neuron.rs  poisson.rs  region.rs  replay.rs  reward.rs  rng.rs  stdp.rs  structural.rs  synapse.rs
crates/snn-core/tests/: assembly.rs  btsp_plateau_eligibility.rs  btsp_soft_bounds.rs  ei_stability.rs  hardening.rs  heap_and_channels.rs  homeostasis.rs  immutable_step_equivalence.rs  istdp.rs  iter44_breakthrough.rs  lif_basic.rs  serde_roundtrip.rs  stdp_learning.rs  synaptic_propagation.rs  two_regions.rs
crates/viz/: Cargo.toml
crates/viz/src/: events.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  server.rs  state.rs
crates/viz/static/: index.html  main.js
crates/viz/tests/: concurrency_cap.rs  health.rs  metrics_endpoint.rs  smoke.rs  snapshot_migration.rs
deploy/: prometheus.yml
deploy/grafana/dashboards/: javis-overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: prometheus.yml
notes/: 00-architektur.md  01-snn-core-baseline.md  02-assembly-und-throughput.md  03-ei-balance-und-adjazenz.md  04-multi-region-aer.md  05-encoder-stub.md  06-pattern-completion.md  07-homeostasis.md  08-pattern-completion-mit-homeostase.md  09-decoder.md  10-multi-concept-coexistence.md  11-istdp-intrinsische-selektivitaet.md  12-token-effizienz.md  13-live-viz-iter1.md  14-live-viz-iter2-3d.md  15-live-viz-iter3-persistent.md  16-live-viz-iter4-llm.md  17-persistenz.md  18-wikipedia-skalierung.md  19-zwei-decode-modi.md  20-bio-optimierungen.md  21-architektur-haertung.md  22-heap-channels-lints.md  23-production-polish.md  24-tracing-observability.md  25-health-readiness-probes.md  26-prometheus-metrics.md  27-supply-chain-cargo-deny.md  28-msrv-rust-186.md  29-dependabot.md  30-rustdoc-warnings-as-errors.md  31-criterion-benchmarks.md  32-container-deploy.md  33-docker-stack-verified.md  34-end-to-end-sanity.md  35-load-test.md  36-concurrency-cap.md  37-snapshot-versioning.md  38-read-only-recall.md  39-profile-and-autovec.md  (+33 more)
reports/: gate_a_gamma_1_1_candidate_report.md  gate_a_gamma_1_1_config.json  gate_a_gamma_1_1_config.md
reports/runs/: README.md  gate_a_gamma_1_1_seed0.verdict.json  gate_a_gamma_1_1_seed1.verdict.json
scripts/: evaluate_gate_a.py  load_test.py  pipeline_profile.py  sanity_check.py
