[workspace]
resolver = "2"
members = ["crates/snn-core", "crates/encoders", "crates/eval", "crates/llm", "crates/viz"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/beko2210/javis"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
