[package]
name = "encoders"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Text → SDR encoders for Javis. Deterministic, dependency-free hashing."

[lib]
path = "src/lib.rs"

[dependencies]
snn-core = { path = "../snn-core" }
serde = { workspace = true }
