[package]
name = "llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude API adapter for Javis. Real calls when ANTHROPIC_API_KEY is set, deterministic mocks otherwise."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
