[package]
name = "snn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Spiking neural network core for Javis — brain-inspired knowledge graph."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
