[package]
name = "snn-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Spiking neural network core for Javis — brain-inspired knowledge graph."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "network_step"
harness = false

[[bench]]
name = "brain_step"
harness = false
