[package]
name = "viz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Live 3D visualisation server for Javis. Streams brain state over WebSocket."

[lib]
path = "src/lib.rs"

[[bin]]
name = "javis-viz"
path = "src/main.rs"

[dependencies]
snn-core = { path = "../snn-core" }
encoders = { path = "../encoders" }
eval = { path = "../eval" }
llm = { path = "../llm" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "fs"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
futures-util = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
